# Online-store-dataset

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/Database/: Creat DataBase.sql  Task 1.sql  Task 2.sql
notebooks/Python/: 1. python and mysql.ipynb  2. Analysis by python.ipynb
online_store_dataset/: __init__.py  dataset.py  features.py  plots.py
online_store_dataset/modeling/: predict.py  train.py
